<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_WP_Bedroom1" Id="{fe976c39-ba58-4a97-9a5e-bd0211f0d8d9}">
    <Declaration><![CDATA[// Slaapkamer 1 B1-1L0-0
TYPE ST_WP_Bedroom1 :
STRUCT
	fbButton1		: FB_DigitalIn;
	fbButton2		: FB_DigitalIn;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>